# excel-grapher-demo

./: .gitignore  README.md  deploy.py  extract_graph.py  figure1_data.py  main.py  precache_figure1_gdp_shocks.py  pyproject.toml  ssr_charts.py  summary.md
.cache/: .gitignore  gdp-shocks-excel-grapher.json  gdp-shocks-xlwings.json
lic_dsf/: __init__.py  cache_compare.py  graph.py  libreoffice.py  libreoffice_backend.py  payload.py  workbook_backend.py  workbook_check.py  workbook_payload.py  xlwings_backend.py
scripts/: check_libreoffice.py  extract_graph.py  precache.py  screenshot_dashboard.py
templates/: layout.html
templates/panels/: panel_1.html
templates/partials/: charts.html  error.html  gdp_controls.html  status.html
tests/: manual-check.xlsx  test_backend_cache_parity.py  test_backend_switching.py  test_chart_colors.py  test_chart_pixels.py  test_figure1_panel_labels.py  test_gdp_shock_series.py
web/: __init__.py  charts.py
