[project]
name = "py-lic-dsf-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "excel-grapher",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "openpyxl>=3.1.5",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv.sources]
excel-grapher = { git = "https://github.com/Teal-Insights/excel-grapher" }

[dependency-groups]
dev = [
    "playwright>=1.49.0",
    "ruff>=0.15.8",
    "ty>=0.0.26",
    "xlwings>=0.34.0",
]
